--- a/src/App.css
+++ b/src/App.css
@@ -44,14 +44,14 @@ h1:hover {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  min-height: 100vh;
+  padding: 0; 
   background-color: rgb(40, 37, 53);
 }
 
 main {
   padding: 10px;
-  height: 75vh;
-  margin: 10vh 0 10vh;
+  height: 80vh;
+  margin: 0 0 0;
   overflow-y: scroll;
   display: flex;
   flex-direction: column;
@@ -66,7 +66,7 @@ main::-webkit-scrollbar-track {
 }
 
 main::-webkit-scrollbar-thumb {
-  background: #6649b8;
+  background: #0ccac4;
 }
 
 form {
@@ -82,6 +82,7 @@ form {
 form button {
   width: 20%;
   background-color: #0ccac4;
+  height: 10vh;
 }
 
 
@@ -106,6 +107,20 @@ button {
   display: inline-block;
   cursor: pointer;
   font-size: 1.25rem;
+  height: 5.5vh; 
+}
+
+h3 {
+  background-color: #0ccac4; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 0; 
+  font-size: 1.25rem;
+  height: 5.5vh; 
 }
 
 button:disabled {
@@ -120,8 +135,6 @@ button:disabled {
   max-width: 400px;
   margin: 0 auto;
 }
-
-
 
 
 ul, li {
