Fixed text styling

--- a/src/App.css
+++ b/src/App.css
@@ -150,6 +150,17 @@ p {
   border-radius: 25px;
   position: relative;
   color: black;
+  text-align: center;
+}
+
+.m {
+  max-width: 500px;
+  margin-bottom: 12px;
+  line-height: 24px;
+  padding: 10px 20px;
+  border-radius: 25px;
+  position: relative;
+  color: black;
   text-align: left;
 }
 
